--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <button class='description '>Change List Description</button>
   <div class="list">
     <p class='description'>Things that are purple:</p>
-    <ul>
+    <ul tagName="">
       <li>grapes</li>
       <li class='error-not-purple'>oranges</li>
       <li>amethyst</li>
@@ -25,6 +25,9 @@
       <li class='error-not-purple'>snow</li>
       <li>plums</li>
     </ul>
+    <input type='text' class='addItemInput'>
+    <button class='addItemButton '>Add Item</button>
+    <button class='removeItemButton '>Remove Item</button>
   </div>
   <script src="app.js"></script>
 </body>
