added remove, up and down buttons

--- a/index.html
+++ b/index.html
@@ -17,13 +17,41 @@
   <div class="list">
     <p class='description'>Things that are purple:</p>
     <ul>
-      <li>grapes</li>
-      <li class='error-not-purple'>oranges</li>
-      <li>amethyst</li>
-      <li>lavender</li>
-      <li class='error-not-purple'>fire trucks</li>
-      <li class='error-not-purple'>snow</li>
-      <li>plums</li>
+      <li>grapes
+        <button class='remove'>Remove</button>
+        <button class='up'>Up</button>
+        <button class='down'>Down</button>
+      </li>
+      <li class='error-not-purple'>oranges
+        <button class='remove'>Remove</button>
+        <button class='up'>Up</button>
+        <button class='down'>Down</button>
+      </li>
+      <li>amethyst
+        <button class='remove'>Remove</button>
+        <button class='up'>Up</button>
+        <button class='down'>Down</button>
+      </li>
+      <li>lavender
+        <button class='remove'>Remove</button>
+        <button class='up'>Up</button>
+        <button class='down'>Down</button>
+      </li>
+      <li class='error-not-purple'>fire trucks
+        <button class='remove'>Remove</button>
+        <button class='up'>Up</button>
+        <button class='down'>Down</button>
+      </li>
+      <li class='error-not-purple'>snow
+        <button class='remove'>Remove</button>
+        <button class='up'>Up</button>
+        <button class='down'>Down</button>
+      </li>
+      <li>plums
+        <button class='remove'>Remove</button>
+        <button class='up'>Up</button>
+        <button class='down'>Down</button>
+      </li>
     </ul>
     <input type='text' class='addItemInput'>
     <button class='addItemButton '>Add Item</button>
